<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imagenSerie"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/txtNombreSerie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_toEndOf="@+id/imagenSerie"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/txtAñoSerie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtNombreSerie"
                android:layout_alignStart="@+id/txtTemporadaSerie"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:text="@string/age"
                android:paddingStart="50dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtTemporadaSerie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtNombreSerie"
                android:layout_alignStart="@+id/txtNombreSerie"
                android:layout_marginTop="10dp"
                android:text="@string/temporada"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtCategoriaSerie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTemporadaSerie"
                android:layout_alignStart="@+id/txtTemporadaSerie"
                android:layout_marginTop="10dp"
                android:text="@string/categoria"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtDisponibleSerie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtCategoriaSerie"
                android:layout_alignStart="@+id/txtCategoriaSerie"
                android:layout_marginTop="10dp"
                android:text="@string/disponible"
                android:textSize="20sp"
                android:textStyle="bold" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>